--- a/spapp/views/page1.html
+++ b/spapp/views/page1.html
@@ -12,7 +12,7 @@
           <div class="col-lg-4 col-md-6">
               <div class="class-item">
                   <div class="ci-pic">
-                      <img src="../img/classes/class-1.jpg" alt="">
+                      <img src="http://localhost/Kerim123/spapp/img/classes/class-1.jpg" alt="">
                   </div>
                   <div class="ci-text">
                       <span>STRENGTH</span>
@@ -24,7 +24,7 @@
           <div class="col-lg-4 col-md-6">
               <div class="class-item">
                   <div class="ci-pic">
-                      <img src="../img/classes/class-2.jpg" alt="">
+                      <img src="http://localhost/Kerim123/spapp/img/classes/class-2.jpg" alt="">
                   </div>
                   <div class="ci-text">
                       <span>Cardio</span>
@@ -36,7 +36,7 @@
           <div class="col-lg-4 col-md-6">
               <div class="class-item">
                   <div class="ci-pic">
-                      <img src="../img/classes/class-3.jpg" alt="">
+                      <img src="http://localhost/Kerim123/spapp/img/classes/class-3.jpg" alt="">
                   </div>
                   <div class="ci-text">
                       <span>STRENGTH</span>
@@ -48,7 +48,7 @@
           <div class="col-lg-6 col-md-6">
               <div class="class-item">
                   <div class="ci-pic">
-                      <img src="../img/classes/class-4.jpg" alt="">
+                      <img src="http://localhost/Kerim123/spapp/img/classes/class-4.jpg" alt="">
                   </div>
                   <div class="ci-text">
                       <span>Cardio</span>
@@ -60,7 +60,7 @@
           <div class="col-lg-6">
               <div class="class-item">
                   <div class="ci-pic">
-                      <img src="../img/classes/class-5.jpg" alt="">
+                      <img src="http://localhost/Kerim123/spapp/img/classes/class-5.jpg" alt="">
                   </div>
                   <div class="ci-text">
                       <span>Training</span>
@@ -92,75 +92,21 @@
 
 <!-- Pricing Section Begin -->
 <section class="pricing-section spad">
-  <div class="container">
-      <div class="row">
-          <div class="col-lg-12">
-              <div class="section-title">
-                  <span>Our Plan</span>
-                  <h2>Choose your pricing plan</h2>
-              </div>
-          </div>
-      </div>
-      <div class="row justify-content-center">
-          <div class="col-lg-4 col-md-8">
-              <div class="ps-item">
-                  <h3>Class drop-in</h3>
-                  <div class="pi-price">
-                      <h2>$ 39.0</h2>
-                      <span>SINGLE CLASS</span>
-                  </div>
-                  <ul>
-                      <li>Free riding</li>
-                      <li>Unlimited equipments</li>
-                      <li>Personal trainer</li>
-                      <li>Weight losing classes</li>
-                      <li>Month to mouth</li>
-                      <li>No time restriction</li>
-                  </ul>
-                  <a href="./enroll.html" class="primary-btn pricing-btn">Enroll now</a>
-                  <a href="./enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
-              </div>
-          </div>
-          <div class="col-lg-4 col-md-8">
-              <div class="ps-item">
-                  <h3>12 Month unlimited</h3>
-                  <div class="pi-price">
-                      <h2>$ 99.0</h2>
-                      <span>SINGLE CLASS</span>
-                  </div>
-                  <ul>
-                      <li>Free riding</li>
-                      <li>Unlimited equipments</li>
-                      <li>Personal trainer</li>
-                      <li>Weight losing classes</li>
-                      <li>Month to month</li>
-                      <li>No time restriction</li>
-                  </ul>
-                  <a href="./enroll.html" class="primary-btn pricing-btn">Enroll now</a>
-                  <a href="./enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
-              </div>
-          </div>
-          <div class="col-lg-4 col-md-8">
-              <div class="ps-item">
-                  <h3>6 Month unlimited</h3>
-                  <div class="pi-price">
-                      <h2>$ 59.0</h2>
-                      <span>SINGLE CLASS</span>
-                  </div>
-                  <ul>
-                      <li>Free riding</li>
-                      <li>Unlimited equipments</li>
-                      <li>Personal trainer</li>
-                      <li>Weight losing classes</li>
-                      <li>Month to mouth</li>
-                      <li>No time restriction</li>
-                  </ul>
-                  <a href="./enroll.html" class="primary-btn pricing-btn">Enroll now</a>
-                  <a href="./enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
-              </div>
-          </div>
-      </div>
-  </div>
+    <section class="pricing-section spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="section-title">
+                        <span>Our Plan</span>
+                        <h2>Choose your pricing plan</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center" id="pricing-items-container">
+                <!-- Pricing items will be populated here -->
+            </div>
+        </div>
+      </section>
 </section>
 <!-- Pricing Section End -->
 
@@ -207,7 +153,7 @@
       <div class="row">
           <div class="ts-slider owl-carousel">
               <div class="col-lg-4">
-                  <div class="ts-item set-bg" data-setbg="../img/team/team-1.jpg">
+                  <div class="ts-item set-bg" data-setbg="http://localhost/Kerim123/spapp/img/team/team-1.jpg">
                       <div class="ts_text">
                           <h4>Athart Rachel</h4>
                           <span>Gym Trainer</span>
@@ -215,7 +161,7 @@
                   </div>
               </div>
               <div class="col-lg-4">
-                  <div class="ts-item set-bg" data-setbg="../img/team/team-2.jpg">
+                  <div class="ts-item set-bg" data-setbg="http://localhost/Kerim123/spapp/img/team/team-2.jpg">
                       <div class="ts_text">
                           <h4>John Mcgin</h4>
                           <span>Gym Trainer</span>
@@ -223,7 +169,7 @@
                   </div>
               </div>
               <div class="col-lg-4">
-                  <div class="ts-item set-bg" data-setbg="../img/team/team-3.jpg">
+                  <div class="ts-item set-bg" data-setbg="http://localhost/Kerim123/spapp/img/team/team-3.jpg">
                       <div class="ts_text">
                           <h4>Wayne Rooney</h4>
                           <span>Gym Trainer</span>
@@ -231,7 +177,7 @@
                   </div>
               </div>
               <div class="col-lg-4">
-                  <div class="ts-item set-bg" data-setbg="../img/team/team-4.jpg">
+                  <div class="ts-item set-bg" data-setbg="http://localhost/Kerim123/spapp/img/team/team-4.jpg">
                       <div class="ts_text">
                           <h4>Fabiano Ruiz</h4>
                           <span>Gym Trainer</span>
@@ -239,7 +185,7 @@
                   </div>
               </div>
               <div class="col-lg-4">
-                  <div class="ts-item set-bg" data-setbg="../img/team/team-5.jpg">
+                  <div class="ts-item set-bg" data-setbg="http://localhost/Kerim123/spapp/img/team/team-5.jpg">
                       <div class="ts_text">
                           <h4>Elizabeth Mcquenn</h4>
                           <span>Gym Trainer</span>
@@ -247,7 +193,7 @@
                   </div>
               </div>
               <div class="col-lg-4">
-                  <div class="ts-item set-bg" data-setbg="../img/team/team-6.jpg">
+                <div class="ts-item set-bg" data-setbg="http://localhost/Kerim123/spapp/img/team/team-6.jpg">
                       <div class="ts_text">
                           <h4>Lisa Welsch</h4>
                           <span>Gym Trainer</span>
@@ -297,7 +243,7 @@
           <div class="col-lg-4">
               <div class="fs-about">
                   <div class="fa-logo">
-                      <a href="#"><img src="../img/logo.png" alt=""></a>
+                      <a href="#"><img src="http://localhost/Kerim123/spapp/img/logo.png" alt=""></a>
                   </div>
                   <p>It is very important to take care of the patient, to follow the training process and enjoy.</p>
                   
@@ -351,14 +297,77 @@
 
 <!-- Js Plugins -->
 
-<script src="../js/jquery-3.3.1.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/jquery.magnific-popup.min.js"></script>
-<script src="../js/masonry.pkgd.min.js"></script>
-<script src="../js/jquery.barfiller.js"></script>
-<script src="../js/jquery.slicknav.js"></script>
-<script src="../js/owl.carousel.min.js"></script>
-<script src="../js/main.js"></script>
+<!-- Js Plugins -->
+<script src="http://localhost/Kerim123/spapp/js/jquery-3.3.1.min.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/bootstrap.min.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/jquery.magnific-popup.min.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/masonry.pkgd.min.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/jquery.barfiller.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/jquery.slicknav.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/owl.carousel.min.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/main.js"></script>
+<script>
+    $(document).ready(function () {
+        // Fetch pricing plan data from backend
+        $.get('http://localhost/Kerim123/gym-backend/get_program.php', function (response) {
+            console.log(response); // Log the response to inspect it
+            var pricingPlans = response;
+            if (Array.isArray(pricingPlans)) {
+                // Populate the pricing plan items
+                populatePricingPlanItems(pricingPlans);
+            } else {
+                console.error("Invalid response format:", pricingPlans);
+            }
+        }).fail(function (xhr, status, error) {
+            console.error("Error fetching data:", error);
+        });
+    });
+
+    
+function populatePricingPlanItems(pricingPlans) {
+  var container = $('#pricing-items-container');
+  container.empty();
+  pricingPlans.forEach(function (plan) {
+    var html = `
+      <div class="col-lg-4 col-md-8">
+        <div class="ps-item">
+          <h3>${plan.name}</h3>
+          <div class="pi-price">
+            <h2>$ ${plan.price}</h2>
+            <span>SINGLE CLASS</span>
+          </div>
+          <ul>`;
+
+    // Extract features from comment (if features are intended to be separate)
+    var features = [];
+    if (plan.comment) {
+      features = plan.comment.split('\n').map(function(feature) {
+        return feature.trim(); // Clean up extra spaces
+      });
+    }
+
+    // Check if features exist and iterate
+    if (features.length > 0) {
+      features.forEach(function (feature) {
+        html += `<li>${feature}</li>`;
+      });
+    } else {
+      // Handle empty features array (optional)
+      // html += '<li>No features included</li>';
+    }
+    
+    html += `</ul>
+          <a href="./enroll.html" class="primary-btn pricing-btn">Enroll now</a>
+          <a href="./enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
+        </div>
+      </div>`;
+    container.append(html);
+  });
+}
+</script>
+
+</body>
+
 
 
 
