--- a/spapp/views/page4.html
+++ b/spapp/views/page4.html
@@ -158,19 +158,19 @@
 
 <!-- Js Plugins -->
 
-<script src="../js/jquery.min.js"></script>
-    <script src="../js/jquery.validate.min.js"></script>
-    <script src="../js/dataTables.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/jquery.min.js"></script>
+    <script src="http://localhost/Kerim123/spapp/js/jquery.validate.min.js"></script>
+    <script src="http://localhost/Kerim123/spapp/js/dataTables.js"></script>
     
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/jquery.magnific-popup.min.js"></script>
-    <script src="../js/masonry.pkgd.min.js"></script>
-    <script src="../js/block-ui.js"></script>
-    <script src="../js/jquery.barfiller.js"></script>
-    <script src="../js/jquery.slicknav.js"></script>
-    <script src="../js/owl.carousel.min.js"></script>
-    <script src="../js/main.js"></script>
-    <script src="../js/contact.js"></script>
+    <script src="http://localhost/Kerim123/spapp/js/bootstrap.min.js"></script>
+    <script src="http://localhost/Kerim123/spapp/js/jquery.magnific-popup.min.js"></script>
+    <script src="http://localhost/Kerim123/spapp/js//masonry.pkgd.min.js"></script>
+    <script src="http://localhost/Kerim123/spapp/js/block-ui.js"></script>
+    <script src="http://localhost/Kerim123/spapp/js/jquery.barfiller.js"></script>
+    <script src="http://localhost/Kerim123/spapp/js/jquery.slicknav.js"></script>
+    <script src="http://localhost/Kerim123/spapp/js/owl.carousel.min.js"></script>
+    <script src="http://localhost/Kerim123/spapp/js/main.js"></script>
+    <script src="http://localhost/Kerim123/spapp/js/contact.js"></script>
 
 
 
