--- a/spapp/views/page2.html
+++ b/spapp/views/page2.html
@@ -121,8 +121,8 @@
                       <li>Month to month</li>
                       <li>No time restriction</li>
                   </ul>
-                  <a href="../enroll.html" class="primary-btn pricing-btn">Enroll now</a>
-                  <a href="../enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
+                  <a href="http://localhost/Kerim123/spapp/enroll.html" class="primary-btn pricing-btn">Enroll now</a>
+                  <a href="http://localhost/Kerim123/spapp/enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
               </div>
           </div>
           <div class="col-lg-4 col-md-8">
@@ -140,8 +140,8 @@
                       <li>Month to mouth</li>
                       <li>No time restriction</li>
                   </ul>
-                  <a href="../enroll.html" class="primary-btn pricing-btn">Enroll now</a>
-                  <a href="../enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
+                  <a href="http://localhost/Kerim123/spapp/enroll.html" class="primary-btn pricing-btn">Enroll now</a>
+                  <a href="http://localhost/Kerim123/spapp/enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
               </div>
           </div>
           <div class="col-lg-4 col-md-8">
@@ -159,8 +159,8 @@
                       <li>Month to mouth</li>
                       <li>No time restriction</li>
                   </ul>
-                  <a href="../enroll.html" class="primary-btn pricing-btn">Enroll now</a>
-                  <a href="../enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
+                  <a href="http://localhost/Kerim123/spapp/enroll.html" class="primary-btn pricing-btn">Enroll now</a>
+                  <a href="http://localhost/Kerim123/spapp/enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
               </div>
           </div>
       </div>
