--- a/spapp/views/page6.html
+++ b/spapp/views/page6.html
@@ -32,20 +32,12 @@
                                         <input type="checkbox" name="remember" id="remember" class="form-check-input">
                                         <label for="remember" class="form-check-label">Remember Me</label>
                                     </div>
-                                    <button type="submit" class="btn btn-primary ms-auto">
+                                    <button type="submit" class="btn btn-primary ms-auto" onclick="window.location.href='#page1'">
                                         Login
                                     </button>
                                 </div>
                             </form>
-                            <div class="mt-5">
-                                <table id="tutorial-table" class="table table-striped">
-                                    <thead>
-                                        <th>ID</th>
-                                        <th>Email</th>
-                                        <th>Password</th>
-                                    </thead>
-                                </table>
-                            </div>
+                            
                         </div>
                         <div class="card-footer py-3 border-0">
                             <div class="text-center">
