--- a/spapp/views/page7.html
+++ b/spapp/views/page7.html
@@ -36,7 +36,9 @@
                               </div>
                               <div class="col-12">
                                   <div class="d-grid my-3">
-                                      <button type="submit" class="btn btn-primary btn-lg">Sign up</button>
+                                    <button type="submit" class="btn btn-primary ms-auto" onclick="window.location.href='#page1'">
+                                        Register
+                                    </button>
                                   </div>
                               </div>
                               <div class="col-12">
@@ -44,19 +46,7 @@
                               </div>
                           </div>
                       </form>
-                      <div class="mt-5">
-                          <table id="tutorial-table" class="table table-stripped">
-                              <thead>
-                                  <th data-name="action">Actions</th>
-                                  <th data-name="id">ID</th>
-                                  <th data-name="firstName">First name</th>
-                                  <th data-name="lastName">Last name</th>
-                                  <th data-name="email">Email</th>
-                                  <th data-name="password">Password</th>
-                              </thead>
-                              <!-- Table body content will be populated dynamically -->
-                          </table>
-                      </div>
+                      
                   </div>
               </div>
           </div>
@@ -72,8 +62,8 @@
     <script src="http://localhost/Kerim123/spapp/js/dataTables.js"></script>
     <script src="http://localhost/Kerim123/spapp/js/dataTables.bootstrap5.js"></script>
     <script src="http://localhost/Kerim123/spapp/js/utils.js"></script>
-    <script src="http://localhost/Kerim123/spapp/js/forms.js"></script>
-    <script>MemberService.reload_member_datatable()</script>
+    
+    
     
 </body>
 </html>
