--- a/spapp/views/page10.html
+++ b/spapp/views/page10.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fitness</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../spapp/css/spinkit.css" rel="stylesheet">
-    <link href="../spapp/css/dataTables.bootstrap5.css" rel="stylesheet">
-    
-</head>
-<body>
+
 <div class="container">
-    
+    <h3>Welcome</h3>
     <br>
     <form id="tutorial-form" method="POST">
         <div class="mb-3">
@@ -33,6 +22,12 @@
             <label for="select" class="form-label">Select a trainer :</label>
             <select class="form-select" id="select" name="select">
                 <option selected>Select an option</option>
+                <option value="Athart Rachal">Athart Rachal</option>
+                <option value="John Mcgin">John Mcgin</option>
+                <option value="Wayne Rooney">Wayne Rooney</option>
+                <option value="Elizabeth Mcquenn">Elizabeth Mcquenn</option>
+                <option value="Lisa Welsch">Lisa Welsch</option>
+                <option value="Fabiano Ruiz">Fabiano Ruiz</option>
             </select>
         </div>
 
@@ -51,43 +46,32 @@
             <textarea class="form-control" id="textarea" name="textarea" rows="4"></textarea>
         </div>
 
-        <button type="submit" class="btn btn-primary" onclick="window.location.href = 'http://localhost/Kerim123/spapp/index.html#page1';">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
-    
+    <div class="mt-5">
+        <table id="tutorial-table" class="table table-striped">
+            <thead>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Password</th>
+                <th>Trainer</th>
+                <th>Program</th>
+                <th>Comment</th>
+            </thead>
+        </table>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<script src="../spapp/js/jquery.min.js"></script>
-<script src="../spapp/js/block-ui.js"></script>
-<script src="../spapp/js/jquery.validate.min.js"></script>
-<script src="../spapp/js/dataTables.js"></script>
-<script src="../spapp/js/dataTables.bootstrap5.js"></script>
-<script src="../spapp/js/enroll.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/jquery.min.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/block-ui.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/jquery.validate.min.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/dataTables.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/dataTables.bootstrap5.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/enroll1.js"></script>
 <script src="http://localhost/Kerim123/spapp/js/constants.js"></script>
 
-
-<script>
-    $(document).ready(function() {
-     // Fetch trainers data from backend
-     $.get('http://localhost/Kerim123/gym-backend/get_trainers.php', function(response) {
-         console.log(response); // Log the response to inspect it
-         var trainers = response;
-         // Populate the select dropdown with trainers
-         populateTrainersDropdown(trainers);
-     });
- });
- 
- function populateTrainersDropdown(trainers) {
-     var select = $("#select");
-     select.empty();
-     select.append('<option selected>Select an option</option>');
-     trainers.forEach(function(trainer) {
-         // Concatenate firstName and lastName as the value for the option
-         select.append('<option value="' + trainer.firstName + ' ' + trainer.lastName + '">' + trainer.firstName + ' ' + trainer.lastName + '</option>');
-     });
- }
- </script>
-
-</body>
+  </body>
 </html>
