--- a/spapp/views/page1.html
+++ b/spapp/views/page1.html
@@ -12,7 +12,7 @@
           <div class="col-lg-4 col-md-6">
               <div class="class-item">
                   <div class="ci-pic">
-                      <img src="http://localhost/Kerim123/spapp/img/classes/class-1.jpg" alt="">
+                      <img src="../spapp/img/classes/class-1.jpg" alt="">
                   </div>
                   <div class="ci-text">
                       <span>STRENGTH</span>
@@ -24,7 +24,7 @@
           <div class="col-lg-4 col-md-6">
               <div class="class-item">
                   <div class="ci-pic">
-                      <img src="http://localhost/Kerim123/spapp/img/classes/class-2.jpg" alt="">
+                      <img src="../spapp/img/classes/class-2.jpg" alt="">
                   </div>
                   <div class="ci-text">
                       <span>Cardio</span>
@@ -36,7 +36,7 @@
           <div class="col-lg-4 col-md-6">
               <div class="class-item">
                   <div class="ci-pic">
-                      <img src="http://localhost/Kerim123/spapp/img/classes/class-3.jpg" alt="">
+                      <img src="../spapp/img/classes/class-3.jpg" alt="">
                   </div>
                   <div class="ci-text">
                       <span>STRENGTH</span>
@@ -48,7 +48,7 @@
           <div class="col-lg-6 col-md-6">
               <div class="class-item">
                   <div class="ci-pic">
-                      <img src="http://localhost/Kerim123/spapp/img/classes/class-4.jpg" alt="">
+                      <img src="../spapp/img/classes/class-4.jpg" alt="">
                   </div>
                   <div class="ci-text">
                       <span>Cardio</span>
@@ -60,7 +60,7 @@
           <div class="col-lg-6">
               <div class="class-item">
                   <div class="ci-pic">
-                      <img src="http://localhost/Kerim123/spapp/img/classes/class-5.jpg" alt="">
+                      <img src="../spapp/img/classes/class-5.jpg" alt="">
                   </div>
                   <div class="ci-text">
                       <span>Training</span>
@@ -298,14 +298,14 @@
 <!-- Js Plugins -->
 
 <!-- Js Plugins -->
-<script src="http://localhost/Kerim123/spapp/js/jquery-3.3.1.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/bootstrap.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/jquery.magnific-popup.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/masonry.pkgd.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/jquery.barfiller.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/jquery.slicknav.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/owl.carousel.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/main.js"></script>
+<script src="../spapp/js/jquery-3.3.1.min.js"></script>
+<script src="../spapp/js/bootstrap.min.js"></script>
+<script src="../spapp/js/jquery.magnific-popup.min.js"></script>
+<script src="../spapp/js/masonry.pkgd.min.js"></script>
+<script src="../spapp/js/jquery.barfiller.js"></script>
+<script src="../spapp/js/jquery.slicknav.js"></script>
+<script src="../spapp/js/owl.carousel.min.js"></script>
+<script src="../spapp/js/main.js"></script>
 <script>
     $(document).ready(function () {
         // Fetch pricing plan data from backend
