--- a/spapp/views/page6.html
+++ b/spapp/views/page6.html
@@ -49,11 +49,11 @@
             </div>
         </div>
     </section>
-    <script src="http://localhost/Kerim123/spapp/js/bootstrap.bundle.min.js"></script>
-    <script src="http://localhost/Kerim123/spapp/js/jquery.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/block-ui.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/jquery.validate.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/dataTables.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/dataTables.bootstrap5.js"></script>
+    <script src="../spapp/js/bootstrap.bundle.min.js"></script>
+    <script src="../spapp/js/jquery.min.js"></script>
+<script src="../spapp/js/block-ui.js"></script>
+<script src="../spapp/js/jquery.validate.min.js"></script>
+<script src="../spapp/js/dataTables.js"></script>
+<script src="../spapp/js/dataTables.bootstrap5.js"></script>
 
-    <script src="http://localhost/Kerim123/spapp/js/login.js"></script>
+    <script src="../spapp/js/login.js"></script>
