--- a/spapp/views/page10.html
+++ b/spapp/views/page10.html
@@ -65,13 +65,13 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/jquery.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/block-ui.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/jquery.validate.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/dataTables.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/dataTables.bootstrap5.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/enroll1.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/constants.js"></script>
+<script src="../spapp/js/jquery.min.js"></script>
+<script src="../spapp/js/block-ui.js"></script>
+<script src="../spapp/js/jquery.validate.min.js"></script>
+<script src="../spapp/js/dataTables.js"></script>
+<script src="../spapp/js/dataTables.bootstrap5.js"></script>
+<script src="../spapp/js/enroll1.js"></script>
+<script src="../spapp/js/constants.js"></script>
 
   </body>
 </html>
