--- a/spapp/views/page2.html
+++ b/spapp/views/page2.html
@@ -121,8 +121,8 @@
                       <li>Month to month</li>
                       <li>No time restriction</li>
                   </ul>
-                  <a href="http://localhost/Kerim123/spapp/enroll.html" class="primary-btn pricing-btn">Enroll now</a>
-                  <a href="http://localhost/Kerim123/spapp/enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
+                  <a href="../spapp/enroll.html" class="primary-btn pricing-btn">Enroll now</a>
+                  <a href="../spapp/enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
               </div>
           </div>
           <div class="col-lg-4 col-md-8">
@@ -140,8 +140,8 @@
                       <li>Month to mouth</li>
                       <li>No time restriction</li>
                   </ul>
-                  <a href="http://localhost/Kerim123/spapp/enroll.html" class="primary-btn pricing-btn">Enroll now</a>
-                  <a href="http://localhost/Kerim123/spapp/enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
+                  <a href="../spapp/enroll.html" class="primary-btn pricing-btn">Enroll now</a>
+                  <a href="../spapp/enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
               </div>
           </div>
           <div class="col-lg-4 col-md-8">
@@ -159,8 +159,8 @@
                       <li>Month to mouth</li>
                       <li>No time restriction</li>
                   </ul>
-                  <a href="http://localhost/Kerim123/spapp/enroll.html" class="primary-btn pricing-btn">Enroll now</a>
-                  <a href="http://localhost/Kerim123/spapp/enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
+                  <a href="../spapp/enroll.html" class="primary-btn pricing-btn">Enroll now</a>
+                  <a href="../spapp/enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
               </div>
           </div>
       </div>
@@ -241,14 +241,14 @@
 <!-- Search model end -->
 
 <!-- Js Plugins -->
-<script src="http://localhost/Kerim123/spapp/js/jquery-3.3.1.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/bootstrap.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/jquery.magnific-popup.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/masonry.pkgd.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/jquery.barfiller.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/jquery.slicknav.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/owl.carousel.min.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/main.js"></script>
+<script src="../spapp/js/jquery-3.3.1.min.js"></script>
+<script src="../spapp/js/bootstrap.min.js"></script>
+<script src="../spapp/js/jquery.magnific-popup.min.js"></script>
+<script src="../spapp/js/masonry.pkgd.min.js"></script>
+<script src="../spapp/js/jquery.barfiller.js"></script>
+<script src="../spapp/js/jquery.slicknav.js"></script>
+<script src="../spapp/js/owl.carousel.min.js"></script>
+<script src="../spapp/js/main.js"></script>
 
 
 
