--- a/spapp/views/page1.html
+++ b/spapp/views/page1.html
@@ -298,6 +298,7 @@
 <!-- Js Plugins -->
 
 <!-- Js Plugins -->
+
 <script src="../spapp/js/jquery-3.3.1.min.js"></script>
 <script src="../spapp/js/bootstrap.min.js"></script>
 <script src="../spapp/js/jquery.magnific-popup.min.js"></script>
@@ -306,11 +307,13 @@
 <script src="../spapp/js/jquery.slicknav.js"></script>
 <script src="../spapp/js/owl.carousel.min.js"></script>
 <script src="../spapp/js/main.js"></script>
+<script src="../spapp/js/jquery.min.js"></script>
+      
+
 <script>
     $(document).ready(function () {
         // Fetch pricing plan data from backend
         $.get('http://localhost/Kerim123/gym-backend/program', function (response) {
-            console.log(response); // Log the response to inspect it
             var pricingPlans = response;
             if (Array.isArray(pricingPlans)) {
                 // Populate the pricing plan items
