--- a/spapp/views/page3.html
+++ b/spapp/views/page3.html
@@ -284,10 +284,18 @@
     <script src="../spapp/js/bootstrap.min.js"></script>
     <script src="../spapp/js/jquery.magnific-popup.min.js"></script>
     <script src="../spapp/js/masonry.pkgd.min.js"></script>
-    <script src="../spapp/jquery.barfiller.js"></script>
-    <script src="../spapp/jquery.slicknav.js"></script>
+    <script src="../spapp/js/jquery.barfiller.js"></script>
+    <script src="../spapp/js/jquery.slicknav.js"></script>
     <script src="../spapp/js/owl.carousel.min.js"></script>
     <script src="../spapp/js/main.js"></script>
+    <script src="../spapp/js/jquery.min.js"></script>
+      <script src="../spapp/js/bootstrap.bundle.min.js"></script>
+      <script src="../spapp/js/block-ui.js"></script>
+      <script src="../spapp/js/jquery.validate.min.js"></script>
+      <script src="../spapp/js/dataTables.js"></script>
+      <script src="../spapp/js/dataTables.bootstrap5.js"></script>
+      <script src="../spapp/js/utils.js"></script>
+      <script src="../spapp/js/forms.js"></script>
     <script>
         $(document).ready(function () {
     
