--- a/spapp/views/page5.html
+++ b/spapp/views/page5.html
@@ -169,7 +169,7 @@
     <script src="../spapp/js/jquery.barfiller.js"></script>
     <script src="../spapp/js/jquery.slicknav.js"></script>
     <script src="../spapp/js/owl.carousel.min.js"></script>
-    <script src="../spapp/spapp/js/main.js"></script>
+    <script src="../spapp/js/main.js"></script>
 
 
 </body>
