--- a/spapp/views/page9.html
+++ b/spapp/views/page9.html
@@ -71,6 +71,7 @@
       <script src="../spapp/js/dataTables.bootstrap5.js"></script>
       <script src="../spapp/js/utils.js"></script>
       <script src="../spapp/js/forms.js"></script>
+      <script src="../spapp/js/rest_client.js"></script>
       <script>MemberService.reload_member_datatable()</script>
       
   </body>
