--- a/spapp/views/page3.html
+++ b/spapp/views/page3.html
@@ -296,56 +296,59 @@
       <script src="../spapp/js/dataTables.bootstrap5.js"></script>
       <script src="../spapp/js/utils.js"></script>
       <script src="../spapp/js/forms.js"></script>
-    <script>
+      <script>
         $(document).ready(function () {
-    
-    $.get('http://localhost/Kerim123/gym-backend/training', function (response) {
-        console.log(response); // Log the response to inspect it
-        var chooseUsItems = response;
-        if (Array.isArray(chooseUsItems)) {
-            // Populate the "Why choose us?" items
-            populateChooseUsItems(chooseUsItems);
-        } else {
-            console.error("Invalid response format:", chooseUsItems);
+        // Fetch training data from backend
+        RestClient.get('training')
+            .then(function (trainingData) {
+                console.log("Data fetched successfully:", trainingData);
+                if (Array.isArray(trainingData)) {
+                    // Populate the "Why choose us?" items
+                    populateChooseUsItems(trainingData);
+                } else {
+                    console.error("Invalid response format:", trainingData);
+                }
+            })
+            .catch(function (error) {
+                console.error("Error fetching training data:", error);
+            });
+    });
+        
+        function populateChooseUsItems(trainingData) {
+            var container = $('#why-choose-us-container');
+            container.empty();
+            trainingData.forEach(function (trainingItem) {
+                var html = `
+                    <div class="col-lg-3 col-sm-6">
+                        <div class="cs-item">
+                            <h4>${trainingItem.name}</h4>
+                            <p>${trainingItem.comment}</p>
+                        </div>
+                    </div>`;
+                container.append(html);
+            });
         }
-    }).fail(function (xhr, status, error) {
-        console.error("Error fetching data:", error);
-    });
-});
-
-function populateChooseUsItems(chooseUsItems) {
-    var container = $('#why-choose-us-container');
-    container.empty();
-    chooseUsItems.forEach(function (item) {
-        var html = `
-            <div class="col-lg-3 col-sm-6">
-                <div class="cs-item">
-                    
-                    <h4>${item.name}</h4>
-                    <p>${item.comment}</p>
-                </div>
-            </div>`;
-        container.append(html);
-    });
-}
-    </script>
+        </script>
 
 <script>
     $(document).ready(function () {
         // Fetch data for testimonial section from backend
-        $.get('http://localhost/Kerim123/gym-backend/comment', function (response) {
-            console.log(response); // Log the response to inspect it
-            var comments = response;
-            if (Array.isArray(comments)) {
-                // Populate the testimonial section
-                populateTestimonials(comments);
-            } else {
-                console.error("Invalid response format:", comments);
-            }
-        }).fail(function (xhr, status, error) {
-            console.error("Error fetching data:", error);
-        });
+        RestClient.get('comment')
+            .then(function (comments) {
+                console.log("Data fetched successfully:", comments);
+                if (Array.isArray(comments)) {
+                    // Populate the testimonial section
+                    populateTestimonials(comments);
+                } else {
+                    console.error("Invalid response format:", comments);
+                }
+            })
+            .catch(function (error) {
+                console.error("Error fetching data:", error);
+            });
     });
+
+    
     
     function populateTestimonials(comments) {
         var container = $('.ts_slider');
