--- a/spapp/views/page7.html
+++ b/spapp/views/page7.html
@@ -42,7 +42,7 @@
                                   </div>
                               </div>
                               <div class="col-12">
-                                  <p class="m-0 text-secondary text-center">Already have an account? <a href="#page6" class="link-primary text-decoration-none">Sign in</a></p>
+                                  <p class="m-0 text-secondary text-center">Already have an account? <a href="../spapp/login/index.html" class="link-primary text-decoration-none">Sign in</a></p>
                               </div>
                           </div>
                       </form>
@@ -62,6 +62,7 @@
     <script src="../spapp/js/dataTables.js"></script>
     <script src="../spapp/js/dataTables.bootstrap5.js"></script>
     <script src="../spapp/js/utils.js"></script>
+    
     
     
     
