--- a/spapp/views/page1.html
+++ b/spapp/views/page1.html
@@ -146,7 +146,7 @@
                         <span>Our Team</span>
                         <h2>TRAIN WITH EXPERTS</h2>
                         <br>
-                        <a href="./enroll.html" class="primary-btn  btn-normal">PICK A TRAINER</a>
+                        <a href="#page1" class="primary-btn  btn-normal">PICK A TRAINER</a>
                    
             </div>
         </div>
@@ -366,8 +366,8 @@ function populatePricingPlanItems(pricingPlans) {
         }
 
         html += `</ul>
-            <a href="./enroll.html" class="primary-btn pricing-btn">Enroll now</a>
-            <a href="./enroll.html" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
+            <a href="./#page1" class="primary-btn pricing-btn">Enroll now</a>
+            <a href="./#page1" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
                 </div>
             </div>`;
         container.append(html);
